# SPDX-FileCopyrightText: Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES.
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "cmake>=3.20.1,!=3.23.0",
    "cython>=0.29,<0.30",
    "ninja",
    "scikit-build>=0.13.1",
    "setuptools",
    "tomli; python_version < '3.11'",
    "wheel",
]

[project]
name = "ucxx"
version = "0.0.1"
description = "Python Bindings for the Unified Communication X library (UCX)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pynvml>=11.4.1",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "cloudpickle",
    "cudf",
    "dask",
    "distributed",
    "cupy-cuda11x",
]

[project.urls]
Homepage = "https://github.com/rapidsai/ucxx"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
order_by_type = true
known_dask = [
    "dask",
    "distributed",
]
known_rapids = [
    "rmm",
    "cudf",
]
known_first_party = [
    "ucp",
]
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DASK",
    "RAPIDS",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__init__.py",
]

[tool.setuptools]
license-files = ["LICENSE"]
zip-safe = false
